<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.udacity.sandwichclub.DetailActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_height_200dp"
            android:layout_margin="@dimen/standard_margin"
            app:cardCornerRadius="@dimen/half_standard_margin"
            app:cardElevation="@dimen/half_standard_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_height_200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/sandwich_picture_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/test_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            tools:text="A ham and cheese sandwich is a common type of sandwich. It is made by putting cheese and sliced ham between two slices of bread. The bread is sometimes buttered and/or toasted. Vegetables like lettuce, tomato, onion or pickle slices can also be included. Various kinds of mustard and mayonnaise are also common." />

        <TextView
            android:id="@+id/also_known"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/standard_margin"
            android:paddingEnd="@dimen/standard_margin"
            android:text="@string/detail_also_known_as_label"
            android:textColor="@color/text_up_field_color"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_tv" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/standard_margin"
            android:paddingEnd="@dimen/standard_margin"
            android:text="@string/detail_ingredients_label"
            android:textColor="@color/text_up_field_color"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/also_known"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view" />

        <TextView
            android:id="@+id/also_known_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/standard_margin"
            android:paddingTop="@dimen/half_standard_margin"
            android:paddingEnd="@dimen/standard_margin"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/also_known"
            tools:text="Test \nTest \nTest \nTest" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toBottomOf="@+id/ingredients_tv"
            app:layout_constraintEnd_toStartOf="@+id/ingredients"
            app:layout_constraintStart_toEndOf="@+id/also_known"
            app:layout_constraintTop_toBottomOf="@+id/also_known" />

        <TextView
            android:id="@+id/ingredients_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/standard_margin"
            android:paddingTop="@dimen/half_standard_margin"
            android:paddingEnd="@dimen/standard_margin"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"
            tools:text="Test \nTest \nTest \nTest" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/detail_place_of_origin_label"
            android:textColor="@color/text_up_field_color"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/origin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/origin"
            app:layout_constraintStart_toStartOf="@+id/origin"
            app:layout_constraintTop_toBottomOf="@+id/origin"
            tools:text="Romania" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>